--- a/Style.css
+++ b/Style.css
@@ -100,6 +100,10 @@ button:hover {
 }
 
 #confirmationMessage {
-    margin-top: 20px;
+    margin-top: 30px;
     font-weight: bold;
+    font-family:"Nunito";
+    text-align: center;
+     margin-top: 20px;
+    
 }
